test/semantic_error/se_fc_var.c0
int a;

int f() { a(); }
